@@ -7,7 +7,9 @@ S3method(as.tags,character)
 S3method(as.tags,default)
 S3method(as.tags,html)
 S3method(as.tags,html_dependency)
+S3method(as.tags,list)
 S3method(as.tags,shiny.tag)
+S3method(as.tags,shiny.tag.function)
 S3method(as.tags,shiny.tag.list)
 S3method(format,html)
 S3method(format,shiny.tag)
@@ -78,6 +80,7 @@ export(tag)
 export(tagAppendAttributes)
 export(tagAppendChild)
 export(tagAppendChildren)
+export(tagFunction)
 export(tagGetAttribute)
 export(tagHasAttribute)
 export(tagList)
